Generalpurpose allocator, StreamingTransientDataBuffer and EventDeferredHandler compile and are ready for testing.

--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -350,6 +350,7 @@
 		<Unit filename="../../include/dimension2d.h" />
 		<Unit filename="../../include/driverChoice.h" />
 		<Unit filename="../../include/irr/core/BaseClasses.h" />
+		<Unit filename="../../include/irr/core/EventDeferredHandler.h" />
 		<Unit filename="../../include/irr/core/IBuffer.h" />
 		<Unit filename="../../include/irr/core/ICPUBuffer.h" />
 		<Unit filename="../../include/irr/core/IReferenceCounted.h" />
