Proud to report instancing is back to being operational Sometimes too much validation gets in the way

--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -406,6 +406,7 @@
 		<Unit filename="../../include/vector3d.h" />
 		<Unit filename="../../include/vectorSIMD.h" />
 		<Unit filename="../../src/irr/video/GPUMemoryAllocatorBase.cpp" />
+		<Unit filename="../../src/irr/video/StreamingGPUBufferAllocator.cpp" />
 		<Unit filename="C3DSMeshFileLoader.cpp" />
 		<Unit filename="C3DSMeshFileLoader.h" />
 		<Unit filename="CAnimatedMeshSceneNode.cpp" />
