BaW backports (EBO fail workarounds, Linear Address Allocator fixup, allowing fake alignments on StreamingTransientDataBuffer)

--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -379,6 +379,8 @@
 		<Unit filename="../../include/irr/core/memory/memory.h" />
 		<Unit filename="../../include/irr/core/memory/new_delete.h" />
 		<Unit filename="../../include/irr/macros.h" />
+		<Unit filename="../../include/irr/static_if.h" />
+		<Unit filename="../../include/irr/switch_constexpr.h" />
 		<Unit filename="../../include/irr/type_traits.h" />
 		<Unit filename="../../include/irr/video/GPUMemoryAllocatorBase.h" />
 		<Unit filename="../../include/irr/video/HostDeviceMirrorBufferAllocator.h" />
