--- a/source/Irrlicht/Irrlicht10.0.vcxproj.filters
+++ b/source/Irrlicht/Irrlicht10.0.vcxproj.filters
@@ -2,7 +2,6 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="CGeometryCreator.cpp" />
-    <ClCompile Include="CGPUTransientBuffer.cpp" />
     <ClCompile Include="CIrrDeviceWin32.cpp" />
     <ClCompile Include="CMeshCache.cpp" />
     <ClCompile Include="CMeshManipulator.cpp" />
@@ -29,7 +28,6 @@
     <ClCompile Include="COBJMeshFileLoader.cpp" />
     <ClCompile Include="COCTLoader.cpp" />
     <ClCompile Include="CPLYMeshFileLoader.cpp" />
-    <ClCompile Include="CSkinnedMesh.cpp" />
     <ClCompile Include="CSTLMeshFileLoader.cpp" />
     <ClCompile Include="CTRTextureGouraudAlpha.cpp" />
     <ClCompile Include="CTRTextureGouraudAlphaNoZ.cpp" />
@@ -184,11 +182,8 @@
     <ClCompile Include="FW_Mutex.cpp" />
     <ClCompile Include="CBAWMeshWriter.cpp" />
     <ClCompile Include="CBAWMeshFileLoader.cpp" />
-    <ClCompile Include="CBAWFile.cpp" />
-    <ClCompile Include="CBlobsLoadingManager.cpp" />
     <ClCompile Include="COpenGLMultisampleTexture.cpp" />
     <ClCompile Include="COpenGLMultisampleTextureArray.cpp" />
-    <ClCompile Include="TypedBlob.cpp" />
     <ClCompile Include="bzip2\compress.c" />
     <ClCompile Include="lz4\lz4.c" />
     <ClCompile Include="lz4\lz4frame.c" />
@@ -225,6 +220,13 @@
     <ClCompile Include="IAssetWriter.cpp" />
     <ClCompile Include="IDriver.cpp" />
     <ClCompile Include="convertColor.cpp" />
+    <ClCompile Include="..\..\src\irr\video\GPUMemoryAllocatorBase.cpp" />
+    <ClCompile Include="..\..\src\irr\video\StreamingGPUBufferAllocator.cpp" />
+    <ClCompile Include="CCPUSkinnedMesh.cpp" />
+    <ClCompile Include="..\..\src\irr\asset\bawformat\legacy\CBAWLegacy.cpp" />
+    <ClCompile Include="..\..\src\irr\asset\bawformat\CBAWFile.cpp" />
+    <ClCompile Include="..\..\src\irr\asset\bawformat\CBlobsLoadingManager.cpp" />
+    <ClCompile Include="..\..\src\irr\asset\bawformat\TypedBlob.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\EDriverFeatures.h" />
@@ -232,7 +234,6 @@
     <ClInclude Include="..\..\include\IAnimatedMeshMD3.h" />
     <ClInclude Include="..\..\include\IEventReceiver.h" />
     <ClInclude Include="..\..\include\ILogger.h" />
-    <ClInclude Include="..\..\include\IMetaGranularBuffer.h" />
     <ClInclude Include="..\..\include\IOSOperator.h" />
     <ClInclude Include="..\..\include\IRandomizer.h" />
     <ClInclude Include="..\..\include\IReferenceCounted.h" />
@@ -315,7 +316,6 @@
     <ClInclude Include="..\..\include\IMeshManipulator.h" />
     <ClInclude Include="..\..\include\IMeshSceneNode.h" />
     <ClInclude Include="..\..\include\IMeshWriter.h" />
-    <ClInclude Include="..\..\include\IMetaTriangleSelector.h" />
     <ClInclude Include="..\..\include\IParticleAffector.h" />
     <ClInclude Include="..\..\include\IParticleAnimatedMeshSceneNodeEmitter.h" />
     <ClInclude Include="..\..\include\IParticleAttractionAffector.h" />
@@ -359,30 +359,6 @@
     <ClInclude Include="..\..\include\EGUIElementTypes.h" />
     <ClInclude Include="..\..\include\EMessageBoxFlags.h" />
     <ClInclude Include="..\..\include\ICursorControl.h" />
-    <ClInclude Include="..\..\include\IGUIButton.h" />
-    <ClInclude Include="..\..\include\IGUICheckbox.h" />
-    <ClInclude Include="..\..\include\IGUIComboBox.h" />
-    <ClInclude Include="..\..\include\IGUIContextMenu.h" />
-    <ClInclude Include="..\..\include\IGUIEditBox.h" />
-    <ClInclude Include="..\..\include\IGUIElement.h" />
-    <ClInclude Include="..\..\include\IGUIElementFactory.h" />
-    <ClInclude Include="..\..\include\IGUIEnvironment.h" />
-    <ClInclude Include="..\..\include\IGUIFileOpenDialog.h" />
-    <ClInclude Include="..\..\include\IGUIFont.h" />
-    <ClInclude Include="..\..\include\IGUIImage.h" />
-    <ClInclude Include="..\..\include\IGUIImageList.h" />
-    <ClInclude Include="..\..\include\IGUIInOutFader.h" />
-    <ClInclude Include="..\..\include\IGUIListBox.h" />
-    <ClInclude Include="..\..\include\IGUIMeshViewer.h" />
-    <ClInclude Include="..\..\include\IGUIScrollBar.h" />
-    <ClInclude Include="..\..\include\IGUISkin.h" />
-    <ClInclude Include="..\..\include\IGUISpinBox.h" />
-    <ClInclude Include="..\..\include\IGUISpriteBank.h" />
-    <ClInclude Include="..\..\include\IGUIStaticText.h" />
-    <ClInclude Include="..\..\include\IGUITabControl.h" />
-    <ClInclude Include="..\..\include\IGUIToolbar.h" />
-    <ClInclude Include="..\..\include\IGUITreeView.h" />
-    <ClInclude Include="..\..\include\IGUIWindow.h" />
     <ClInclude Include="..\..\include\vectorSIMD.h" />
     <ClInclude Include="CGeometryCreator.h" />
     <ClInclude Include="CIrrDeviceWin32.h" />
@@ -546,6 +522,9 @@
     <ClInclude Include="..\..\include\CObjectCache.h" />
     <ClInclude Include="..\..\include\IAssetManager.h" />
     <ClInclude Include="astc\vectypes.h" />
+    <ClInclude Include="..\..\src\irr\asset\bawformat\legacy\CBAWLegacy.h" />
+    <ClInclude Include="..\..\include\irr\asset\bawformat\CBAWFile.h" />
+    <ClInclude Include="..\..\include\irr\asset\bawformat\CBlobsLoadingManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="clwinlib\OpenCL.lib" />
