--- a/source/Irrlicht/Irrlicht10.0.vcxproj.filters
+++ b/source/Irrlicht/Irrlicht10.0.vcxproj.filters
@@ -340,7 +340,6 @@
     <ClInclude Include="..\..\include\ISceneNodeAnimatorFactory.h" />
     <ClInclude Include="..\..\include\ISceneNodeFactory.h" />
     <ClInclude Include="..\..\include\IShadowVolumeSceneNode.h" />
-    <ClInclude Include="..\..\include\ISkinnedMesh.h" />
     <ClInclude Include="..\..\include\ITerrainSceneNode.h" />
     <ClInclude Include="..\..\include\ITextSceneNode.h" />
     <ClInclude Include="..\..\include\IVolumeLightSceneNode.h" />
@@ -381,7 +380,6 @@
     <ClInclude Include="COBJMeshFileLoader.h" />
     <ClInclude Include="COCTLoader.h" />
     <ClInclude Include="CPLYMeshFileLoader.h" />
-    <ClInclude Include="CSkinnedMesh.h" />
     <ClInclude Include="CSTLMeshFileLoader.h" />
     <ClInclude Include="CXMeshFileLoader.h" />
     <ClInclude Include="dmfsupport.h" />
@@ -526,6 +524,9 @@
     <ClInclude Include="..\..\include\irr\asset\IMesh.h" />
     <ClInclude Include="..\..\include\irr\video\IGPUMesh.h" />
     <ClInclude Include="..\..\include\irr\video\SGPUMesh.h" />
+    <ClInclude Include="..\..\include\irr\video\IGPUSkinnedMesh.h" />
+    <ClInclude Include="..\..\src\irr\video\CGPUSkinnedMesh.h" />
+    <ClInclude Include="..\..\include\irr\video\IGPUObjectFromAssetConverter.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="clwinlib\OpenCL.lib" />
